--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,4 @@ jobs:
         run: mv build/index.html build/200.html
 
       - name: Deploy on surge
-        run: surge ./build http://salman-project6.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+        run: surge ./build http://quiz-app-bootcamp-2020.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
